# NovaTerm

./: .editorconfig  .gitattributes  .gitignore  AI_POLICY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build-android.sh  build-complete.sh  build.gradle.kts  gradle.properties  keystore.properties.example  keystore.properties.template  settings.gradle.kts
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  crash_report.yml  feature_request.yml
.github/workflows/: audit.yml  bootstrap.yml  build-gpu.yml  build.yml  ci.yml  dependabot-auto-merge.yml  release.yml
app/: build.gradle.kts  proguard-android-optimize.txt  proguard-rules.pro
app/src/androidTest/java/com/novaterm/app/: ExtraKeysBarTest.kt  MainActivityTest.kt  SettingsNavigationTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: novaterm-repo.gpg  setup-claude.sh
app/src/main/cpp/: CMakeLists.txt  novaterm-bootstrap-zip.S  novaterm-bootstrap.c
app/src/main/java/com/novaterm/app/: NovaTermApp.kt
app/src/main/java/com/novaterm/app/crash/: CrashReporter.kt
app/src/main/java/com/novaterm/app/mcp/: DeviceApiTools.kt
app/src/main/java/com/novaterm/app/provider/: NovaTermDocumentsProvider.kt
app/src/main/java/com/novaterm/app/receiver/: BootReceiver.kt  SessionRestoreWorker.kt
app/src/main/java/com/novaterm/app/service/: NotificationHelper.kt  RustEngineManager.kt  ServiceMcpBridge.kt  SessionPersistenceManager.kt  TerminalService.kt  WakeLockManager.kt
app/src/main/java/com/novaterm/app/ui/: AboutScreen.kt  BootstrapScreen.kt  MainActivity.kt  NovaTermApp.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_notification.xml
app/src/main/res/values/: ic_launcher_colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: data_extraction_rules.xml  network_security_config.xml  shortcuts.xml
app/src/test/java/com/novaterm/app/service/: RustEngineManagerTest.kt  ServiceMcpBridgeFileOpsTest.kt  SessionPersistenceManagerTest.kt
app/src/test/java/com/novaterm/app/ui/: KeyInputTest.kt
build-logic/: build.gradle.kts
build-logic/convention/: build.gradle.kts
build-logic/convention/src/main/kotlin/: AndroidComposeConventionPlugin.kt  AndroidLibraryConventionPlugin.kt  KotlinJvmConventionPlugin.kt
core/bootstrap/: build.gradle.kts
core/common/: build.gradle.kts
core/config/: build.gradle.kts
core/llm/: build.gradle.kts
core/mcp/: build.gradle.kts
core/notification/: build.gradle.kts
core/session/: build.gradle.kts
core/session/src/main/assets/shell/: bashrc.sh  inputrc  profile.sh  shrc.sh
core/terminal-emulator/: build.gradle.kts  proguard-rules.pro
core/terminal-emulator/src/main/java/com/novaterm/terminal/: ByteQueue.java  JNI.java  KeyHandler.java  KittyGraphicsCommand.java  KittyGraphicsManager.java  Logger.java  SixelParser.java  TerminalBuffer.java  TerminalColorScheme.java  TerminalColors.java  TerminalEmulator.java  TerminalOutput.java  TerminalRow.java  TerminalSession.java  TerminalSessionClient.java  TextStyle.java  WcWidth.java
core/terminal-emulator/src/main/java/com/termux/terminal/: ByteQueue.java  KittyGraphicsCommand.java  KittyGraphicsManager.java  TerminalBuffer.java  TerminalEmulator.java  TerminalOutput.java  TerminalRow.java  TerminalSession.java  (+1 more)
core/terminal-emulator/src/main/jni/: Android.mk  novaterm_pty.c
core/terminal-view/: build.gradle.kts  proguard-rules.pro
dists/stable/: InRelease  Release
docs/: agent-orchestrator-plan.md  ai-tools-guide.md  android-apis-integration.md  architecture-patterns.md  bootstrap-implementation.md  code-audit-2026-04.md  code-audit-2026.md  competitive-landscape-2026-04.md  competitive-landscape-2026.md  distribution-and-ci.md  mcp-api-specification.json  play-store-listing.md  privacy-policy.md  process-survival-guide.md  release-notes-v0.3.0.md  security-guide.md  sustainability-plan.md  tech-stack-2026.md  terminal-architecture-reference.md  termux-internals.md  testing-strategy.md  unicode-and-i18n.md  vision-perfect-mobile-terminal.md
docs/audits/: AUDIT_MASTER_2026-05-06.md  ROADMAP_FIXES.md
docs/research/: mobile-terminal-ux-2026.md  superset-research-2026-04.md
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 4.txt
fdroid/: com.nvterm.yml
feature/agent/: build.gradle.kts
feature/oem-compat/: build.gradle.kts
feature/oem-compat/src/main/res/values/: strings.xml
feature/settings/: build.gradle.kts
feature/settings/src/main/res/values/: strings.xml
feature/terminal/: build.gradle.kts
feature/terminal/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
rust-core/: Cargo.toml
rust-core/.cargo/: config.toml
rust-core/novaterm-bridge/: Cargo.toml
rust-core/novaterm-bridge/src/: handle_map.rs  jni_bridge.rs  lib.rs  renderer_jni.rs  renderer_map.rs  session.rs  session_jni.rs  session_map.rs
rust-core/novaterm-bridge/tests/: integration_test.rs
rust-core/novaterm-pty/: Cargo.toml
rust-core/novaterm-pty/src/: lib.rs
rust-core/novaterm-renderer/: Cargo.toml
rust-core/novaterm-renderer/src/: lib.rs  software.rs  traits.rs  vulkan.rs
rust-core/novaterm-renderer/src/atlas/: mod.rs
rust-core/novaterm-renderer/src/gpu/: atlas_texture.rs  buffers.rs  context.rs  cursor.rs  frame.rs  mod.rs  pipeline.rs  selection.rs  shader.wgsl  surface.rs
rust-core/novaterm-renderer/tests/: end_to_end.rs
rust-core/novaterm-vt/: Cargo.toml
rust-core/novaterm-vt/fuzz/: .gitignore  Cargo.toml
rust-core/novaterm-vt/fuzz/fuzz_targets/: grid_snapshot.rs  vt_parser.rs
rust-core/novaterm-vt/src/: backend.rs  event.rs  grid_snapshot.rs  lib.rs  sixel.rs
rust-core/novaterm-vt/tests/: integration_tests.rs
scripts/: build-and-install.sh  fix-dpkg-wrapper.sh  generate_bootstrap_checksums.sh  self-update.sh  test-dual-prefix-quick.sh  test-dual-prefix.sh  test-terminal-comprehensive.sh  test-terminal.sh
tools/bench/: novaterm-bench
(+194 files in other folders)
