[package]
name = "novaterm-bridge"
description = "JNI bridge for NovaTerm Rust core to Android/Kotlin"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "novaterm"
crate-type = ["cdylib"]

[features]
default = []
gpu = ["novaterm-renderer"]

[dependencies]
novaterm-vt = { path = "../novaterm-vt" }
novaterm-pty = { path = "../novaterm-pty" }
novaterm-renderer = { path = "../novaterm-renderer", features = ["vulkan"], optional = true }
jni = "0.22"
libc = { workspace = true }
log = { workspace = true }
android_logger = "0.15"
parking_lot = { workspace = true }
