[package]
name = "novaterm-renderer"
description = "GPU-accelerated terminal renderer for NovaTerm (Phase 2b)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["software"]
software = []
vulkan = ["wgpu", "raw-window-handle", "pollster", "bytemuck"]

[dependencies]
novaterm-vt = { path = "../novaterm-vt" }
log = { workspace = true }

# Glyph atlas (always on)
cosmic-text = "0.18"
etagere = "0.3"

# GPU rendering (behind vulkan feature flag)
wgpu = { version = "30", optional = true }
raw-window-handle = { version = "0.6", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
